--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   timeline_tile: ^2.0.0
-
+  video_player: ^2.6.1
 
 
   # The following adds the Cupertino Icons font to your application.
