--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   timeline_tile: ^2.0.0
   video_player: ^2.6.1
+  animated_text_kit: ^4.2.2
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
