--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   video_player: ^2.6.1
   animated_text_kit: ^4.2.2
   provider: ^6.0.5
+  carousel_slider: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
